[gd_scene load_steps=2 format=3 uid="uid://dfhiphc0ghtyh"]

[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="1_a8d2s"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_a8d2s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_end" from="." to="." method="_on_invincibility_end"]
[connection signal="invincibility_start" from="." to="." method="_on_invincibility_start"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
